--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "url": "https://github.com/matheussgr/ti-sprint1/issues"
   },
   "homepage": "https://github.com/matheussgr/ti-sprint1#readme",
-  "description": "",
   "dependencies": {
     "json-server": "^1.0.0-beta.3"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
